--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,11 @@
             <mat-card-title>Registation Form</mat-card-title>
           </mat-card-header>
           <mat-card-content class="Form">
-            <mat-form-field style="width: 58%;">
+            <mat-form-field>
               <mat-label> Enter your Name</mat-label>
               <input matInput name="name" [(ngModel)]="userForm.name">
             </mat-form-field>
-
-            <mat-form-field style="width: 58%;">
+            <mat-form-field>
               <mat-label>Enter your password</mat-label>
               <input matInput [type]="hide ? 'password' : 'text'" name="position" [(ngModel)]="userForm.password">
               <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
@@ -20,18 +19,16 @@
                 <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
               </button>
             </mat-form-field>
-
           </mat-card-content>
           <mat-card-actions>
-            <button *ngIf="isUpdate" mat-button mat-raised-button class="addBtn" (click)="addUser()">Add</button>
-            <button *ngIf="!isUpdate" mat-button mat-raised-button class="addBtn" (click)="updateData()">Update</button>
+            <button *ngIf="isUpdate" mat-button mat-raised-button color="primary" class="addBtn" (click)="addUser()">Add</button>
+            <button *ngIf="!isUpdate" mat-button mat-raised-button color="primary" class="addBtn" (click)="updateData()">Update</button>
           </mat-card-actions>
         </form>
       </mat-card>
     </div>
   </div>
 </div>
-
 
 <table class="styled-table">
   <thead>
